--- a/webapp/sap/ui5/demo/walkthrough/view/Detail.view.xml
+++ b/webapp/sap/ui5/demo/walkthrough/view/Detail.view.xml
@@ -1,8 +1,8 @@
 <mvc:View
-	controllerName="sap.ui5.demo.workthrough.controller.Detail"
+	controllerName="sap.ui5.demo.walkthrough.controller.Detail"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
-	xmlns:wt="sap.ui5.demo.workthrough.control">
+	xmlns:wt="sap.ui5.demo.walkthrough.control">
 	<Page
 		title="{i18n>detailPageTitle}"
 		showNavButton="true"
