--- a/webapp/sap/ui5/demo/walkthrough/view/InvoiceList.view.xml
+++ b/webapp/sap/ui5/demo/walkthrough/view/InvoiceList.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-	controllerName="sap.ui5.demo.workthrough.controller.InvoiceList"
+	controllerName="sap.ui5.demo.walkthrough.controller.InvoiceList"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
 	<Table
