--- a/src/view/App.view.xml
+++ b/src/view/App.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-	controllerName="sap.ui5.demo.walkthrough.controller.App"
+	controllerName="org.fornever.ui5demo.controller.App"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 	displayBlock="true">
