--- a/src/view/Overview.view.xml
+++ b/src/view/Overview.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-	controllerName="sap.ui5.demo.walkthrough.controller.App"
+	controllerName="org.fornever.ui5demo.controller.App"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page title="{i18n>homePageTitle}">
@@ -9,8 +9,8 @@
 				press="onOpenDialog"/>
 		</headerContent>
 		<content>
-			<mvc:XMLView viewName="sap.ui5.demo.walkthrough.view.HelloPanel"/>
-			<mvc:XMLView viewName="sap.ui5.demo.walkthrough.view.InvoiceList"/>
+			<mvc:XMLView viewName="org.fornever.ui5demo.view.HelloPanel"/>
+			<mvc:XMLView viewName="org.fornever.ui5demo.view.InvoiceList"/>
 		</content>
 	</Page>
 </mvc:View>
